org.mmisw.ontmd: MMI Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$

2009-09-21  1.5.0.alpha26
	fixed issue #187 CSV support broken
		VocabClassPanel.SeparatorPanel: fixed handling of selected separator
	
2009-09-16-18  1.5.0.alpha25
	 - implemented #172: search list of ontologies
	 	- New "search ontologies" in the main page to find ontologies according to a given string, which is
	   		searched in basic properties of the ontology.
	 	- "Search" link now called "Search terms" to make clear the distinction
	 	- Tooltips added to bot search options.
	 	
	- Implemented #184: Dispatch term URI in portal
		- The dispatch is now generalized for both ontologies and terms:
			.../orr/#<uri>
	  	  This translates to a call to resolveUri in the iserver module. The return value will determine
	  	  what specific panel and object to dispatch in the GUI.
	 - some reorganization of the interface ("search" link now in the header section)
	 
	
	
		
2009-09-16  1.5.0.alpha24
	- MetadataGroupPanel: #183: Don't ask user whether the submitted ontology is a mapping
	  This should be determined by examining the contents of the ontology.
	  See "listall" operation in Ont module.
	  
	- ResourceTypeWidget(AttrDef attr, boolean editing, boolean includeIsMapCheck, ChangeListener cl):
	  Smaller size of this area so it aligns better with rest of the fields in the form.
	
2009-09-15  1.5.0.alpha23
	- implemented #181: Include ontology URI column in ontology table
		OntologyTable: "URI" column included
	
	- implemented #180: "my submitted ontologies" entry in the tree
		SelectionTree: the first subtree is now, when the user is logged:
			+ All ontologies
				Registered by me
				+ Registered by:
					user1
					user2
					...
		and simply All ontologies when not logged in.
		

2009-09-15  1.5.0.alpha22
	- Removed "portal.service.url" property and associated config methods from everywhere as it is not needed.